--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
         <main>
             <section >
                 <div class="Home">
-                    <div>
-
+                    <div class="hero_img">
+                        <img src="https://media.licdn.com/dms/image/D5603AQHStACxzhYftg/profile-displayphoto-shrink_200_200/0/1694011941939?e=1701302400&v=beta&t=OaclNgzEUbq9lDoNe7Cc0wGYuljLCS3k_6Nwb1H_spo">
                     </div>
                     <article>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero dolorum fugit corrupti nesciunt fugiat nemo, laborum est unde. Ad corporis deserunt explicabo accusantium, incidunt aperiam quia laudantium animi non possimus?
+                        </p>
 
                     </article>
                 </div>
