--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li id="Home-li" class="active"><a href="#Home">Home</a></li>
                     <li><a href="#Research">Research</a></li>
                     <li><a href="#publications">publications</a></li>
-                    <li><a href="#What_I_do">What_I_do</a></li>
+                    <li><a href="#What_I_do">What I do</a></li>
                     <li><a href="#Contact">Contact</a></li>
                 </ul>
             </nav>
@@ -38,7 +38,7 @@
                     <li id="Home-li" class="active"><a href="#Home">Home</a></li>
                     <li id="Research-li"><a href="#Research">Research</a></li>
                     <li id="publications-li"><a href="#publications">publications</a></li>
-                    <li id="What_I_do-li"><a href="#What_I_do">What_I_do</a></li>
+                    <li id="What_I_do-li"><a href="#What_I_do">What I do</a></li>
                     <li id="Contact"><a href="#Contact">Contact</a></li>
                 </ul>
             </aside>
@@ -309,7 +309,7 @@
                 <div class="page">
                     <article>
                         <h1>
-                            What_I_do?
+                            What I do?
                         </h1>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla purus arcu, varius eget
@@ -443,7 +443,7 @@
                 <li><a href="#Home">Home</a></li>
                 <li><a href="#Research">Research</a></li>
                 <li><a href="#publications">publications</a></li>
-                <li><a href="#What_I_do">What_I_do</a></li>
+                <li><a href="#What_I_do">What I do</a></li>
                 <li><a href="#Contact">Contact</a></li>
             </ul>
         </footer>
