adding language and bio

--- a/index.html
+++ b/index.html
@@ -95,17 +95,25 @@
                         <h1>
                             Maedeh Yousefinia
                         </h1>
-                        <h3>
+                        <!-- <h3>
                             PhD Candidate in Biology with a Focus on Cancer Research
-                        </h3>
+                        </h3> -->
                         <p>
-                            Graduated with a Bachelor's degree in Biomedical Engineering with an emphasis on
-                            Biomaterials from Maziar Higher Education Institute. Seeking a PhD in Biology to conduct
-                            research on stem cells and their potential to treat cancer.Proven ability to design,
-                            develop, and test biomedical devices and materials.Strong research skills, with experience
-                            in conducting literature reviews, experimental design, and data analysis.Passionate about
-                            using my skills to make a difference in the world and help people with cancer.
+                            To further my education and desire in a world-class university and challenge myself to
+                            mutual success. I am seeking to deliver
+                            my knowledge, experiences, research, analytical as well as presentation skills that will
+                            benefit in cancer treatment, growth, and
+                            profits.
+                            Honest and ethical, I am looking to call this university my family.
                         </p>
+                        <div>
+                            <button class="btn-border-lang">
+                                ENGLISH
+                            </button>
+                            <button class="btn-border-lang">
+                                PERSIAN
+                            </button>
+                        </div>
                         <div>
                             <button>
                                 My Project
