--- a/index.html
+++ b/index.html
@@ -441,91 +441,169 @@
                             <div class="card">
                                 <img alt="something" src="./unsplash_9anj7QWy-2g.png">
                                 <div class="info">
-                                    <p>researcher</p>
                                     <h2>
-                                        Research
+                                        Cell Culture, Medical Internship
                                     </h2>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla purus arcu.
+                                        Materials and Energy Research Center, Karaj, Iran
                                     </p>
-                                    <button class="btn-border">
+                                    <button class="btn-border" id="btn1">
                                         Read More ...
                                     </button>
+                                    <div id="modal1" class="modal">
+                                        <div class="modal-content">
+                                          <span class="close" data-modal="modal1">&times;</span>
+                                          <h3>Cell Culture, Medical Internship, Materials and Energy Research Center, Karaj, Iran</h3>
+                                          <p>- Maintained and cultured a variety of normal cell lines, including primary cells and immortalized cell lines, ensuring optimal growth and viability.</p>
+                                          <p>- Performed a variety of cell culture experiments, such as proliferation assays, differentiation assays, and cell-cell interaction assays, to investigate the fundamental biology of normal cells and their role in cancer development and progression.</p>
+                                          <p>- Analyzed data from cell culture experiments using statistical software to identify significant trends and interpret the results.</p>
+                                        </div>
+                                      </div>
                                 </div>
                             </div>
                             <div class="card">
                                 <img alt="something" src="./unsplash_9anj7QWy-2g.png">
                                 <div class="info">
-                                    <p>researcher</p>
                                     <h2>
-                                        Research
+                                        Produce Bioplastics From Starch, Special Assistant to Rahmatollah Tavakoli, Professor of Organic Chemistry
                                     </h2>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla purus arcu.
+                                        Maziar Higher Education Institute, Royan, Iran
                                     </p>
-                                    <button class="btn-border">
+                                    <button class="btn-border" id="btn2">
                                         Read More ...
                                     </button>
+                                    <div id="modal2" class="modal">
+                                        <div class="modal-content">
+                                          <span class="close" data-modal="modal2">&times;</span>
+                                          <h3>Produce Bioplastics From Starch, Special Assistant to Rahmatollah Tavakoli, Professor of Organic Chemistry, Maziar Higher Education Institute, Royan, Iran</h3>
+                                          <p>Carefully grew and maintained a variety of starch-producing microbes, including bacteria, yeast, and algae, to ensure that they were healthy and able to produce bioplastics.</p>
+                                          <p>Conducted a variety of experiments to produce bioplastics, such as fermentation, extraction, and purification, to study the basic principles of bioplastic production and improve the process.</p>
+                                          <p>Used statistical software to analyze data from bioplastic production experiments to identify important trends and interpret the results.</p>
+                                        </div>
+                                      </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="title">
+                            <h1>
+                                Work Experience
+                            </h1>
+                        </div>
+                        <div class="publictaion">
+                            <div class="card">
+                                <img alt="something" src="./unsplash_9anj7QWy-2g.png">
+                                <div class="info">
+                                    <h2>
+                                        Cell Culture, Medical Internship
+                                    </h2>
+                                    <p>
+                                        Materials and Energy Research Center, Karaj, Iran
+                                    </p>
+                                    <button class="btn-border" id="btn3">
+                                        Read More ...
+                                    </button>
+                                    <div id="modal3" class="modal">
+                                        <div class="modal-content">
+                                          <span class="close" data-modal="modal3">&times;</span>
+                                          <h3>Cell Culture, Medical Internship, Materials and Energy Research Center, Karaj, Iran</h3>
+                                          <p>- Maintained and cultured a variety of normal cell lines, including primary cells and immortalized cell lines, ensuring optimal growth and viability.</p>
+                                          <p>- Performed a variety of cell culture experiments, such as proliferation assays, differentiation assays, and cell-cell interaction assays, to investigate the fundamental biology of normal cells and their role in cancer development and progression.</p>
+                                          <p>- Analyzed data from cell culture experiments using statistical software to identify significant trends and interpret the results.</p>
+                                        </div>
+                                      </div>
                                 </div>
                             </div>
                             <div class="card">
                                 <img alt="something" src="./unsplash_9anj7QWy-2g.png">
                                 <div class="info">
-                                    <p>researcher</p>
                                     <h2>
-                                        Research
+                                        Produce Bioplastics From Starch, Special Assistant to Rahmatollah Tavakoli, Professor of Organic Chemistry
                                     </h2>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla purus arcu.
+                                        Maziar Higher Education Institute, Royan, Iran
                                     </p>
-                                    <button class="btn-border">
+                                    <button class="btn-border" id="btn4">
                                         Read More ...
                                     </button>
+                                    <div id="modal4" class="modal">
+                                        <div class="modal-content">
+                                          <span class="close" data-modal="modal4">&times;</span>
+                                          <h3>Produce Bioplastics From Starch, Special Assistant to Rahmatollah Tavakoli, Professor of Organic Chemistry, Maziar Higher Education Institute, Royan, Iran</h3>
+                                          <p>Carefully grew and maintained a variety of starch-producing microbes, including bacteria, yeast, and algae, to ensure that they were healthy and able to produce bioplastics.</p>
+                                          <p>Conducted a variety of experiments to produce bioplastics, such as fermentation, extraction, and purification, to study the basic principles of bioplastic production and improve the process.</p>
+                                          <p>Used statistical software to analyze data from bioplastic production experiments to identify important trends and interpret the results.</p>
+                                        </div>
+                                      </div>
                                 </div>
                             </div>
                             <div class="card">
                                 <img alt="something" src="./unsplash_9anj7QWy-2g.png">
                                 <div class="info">
-                                    <p>researcher</p>
                                     <h2>
-                                        Research
+                                        Produce Bioplastics From Starch, Special Assistant to Rahmatollah Tavakoli, Professor of Organic Chemistry
                                     </h2>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla purus arcu.
+                                        Maziar Higher Education Institute, Royan, Iran
                                     </p>
-                                    <button class="btn-border">
+                                    <button class="btn-border" id="btn5">
                                         Read More ...
                                     </button>
+                                    <div id="modal5" class="modal">
+                                        <div class="modal-content">
+                                          <span class="close" data-modal="modal5">&times;</span>
+                                          <h3>Produce Bioplastics From Starch, Special Assistant to Rahmatollah Tavakoli, Professor of Organic Chemistry, Maziar Higher Education Institute, Royan, Iran</h3>
+                                          <p>Carefully grew and maintained a variety of starch-producing microbes, including bacteria, yeast, and algae, to ensure that they were healthy and able to produce bioplastics.</p>
+                                          <p>Conducted a variety of experiments to produce bioplastics, such as fermentation, extraction, and purification, to study the basic principles of bioplastic production and improve the process.</p>
+                                          <p>Used statistical software to analyze data from bioplastic production experiments to identify important trends and interpret the results.</p>
+                                        </div>
+                                      </div>
                                 </div>
                             </div>
                             <div class="card">
                                 <img alt="something" src="./unsplash_9anj7QWy-2g.png">
                                 <div class="info">
-                                    <p>researcher</p>
                                     <h2>
-                                        Research
+                                        Produce Bioplastics From Starch, Special Assistant to Rahmatollah Tavakoli, Professor of Organic Chemistry
                                     </h2>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla purus arcu.
+                                        Maziar Higher Education Institute, Royan, Iran
                                     </p>
-                                    <button class="btn-border">
+                                    <button class="btn-border" id="btn6">
                                         Read More ...
                                     </button>
+                                    <div id="modal6" class="modal">
+                                        <div class="modal-content">
+                                          <span class="close" data-modal="modal6">&times;</span>
+                                          <h3>Produce Bioplastics From Starch, Special Assistant to Rahmatollah Tavakoli, Professor of Organic Chemistry, Maziar Higher Education Institute, Royan, Iran</h3>
+                                          <p>Carefully grew and maintained a variety of starch-producing microbes, including bacteria, yeast, and algae, to ensure that they were healthy and able to produce bioplastics.</p>
+                                          <p>Conducted a variety of experiments to produce bioplastics, such as fermentation, extraction, and purification, to study the basic principles of bioplastic production and improve the process.</p>
+                                          <p>Used statistical software to analyze data from bioplastic production experiments to identify important trends and interpret the results.</p>
+                                        </div>
+                                      </div>
                                 </div>
                             </div>
                             <div class="card">
                                 <img alt="something" src="./unsplash_9anj7QWy-2g.png">
                                 <div class="info">
-                                    <p>researcher</p>
                                     <h2>
-                                        Research
+                                        Produce Bioplastics From Starch, Special Assistant to Rahmatollah Tavakoli, Professor of Organic Chemistry
                                     </h2>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla purus arcu.
+                                        Maziar Higher Education Institute, Royan, Iran
                                     </p>
-                                    <button class="btn-border">
+                                    <button class="btn-border" id="btn7">
                                         Read More ...
                                     </button>
+                                    <div id="modal7" class="modal">
+                                        <div class="modal-content">
+                                          <span class="close" data-modal="modal7">&times;</span>
+                                          <h3>Produce Bioplastics From Starch, Special Assistant to Rahmatollah Tavakoli, Professor of Organic Chemistry, Maziar Higher Education Institute, Royan, Iran</h3>
+                                          <p>Carefully grew and maintained a variety of starch-producing microbes, including bacteria, yeast, and algae, to ensure that they were healthy and able to produce bioplastics.</p>
+                                          <p>Conducted a variety of experiments to produce bioplastics, such as fermentation, extraction, and purification, to study the basic principles of bioplastic production and improve the process.</p>
+                                          <p>Used statistical software to analyze data from bioplastic production experiments to identify important trends and interpret the results.</p>
+                                        </div>
+                                      </div>
                                 </div>
                             </div>
                         </div>
@@ -741,6 +819,95 @@
         document.querySelector('a[href="#Contact"]').addEventListener('click', function (e) {
             window.scrollTo(0, document.body.scrollHeight);
         });
+        
+        // JavaScript
+// Get the buttons
+var btn1 = document.getElementById("btn1");
+var btn2 = document.getElementById("btn2");
+var btn3 = document.getElementById("btn3");
+var btn4 = document.getElementById("btn4");
+var btn5 = document.getElementById("btn5");
+var btn6 = document.getElementById("btn6");
+var btn7 = document.getElementById("btn7");
+
+// Get the modals
+var modal1 = document.getElementById("modal1");
+var modal2 = document.getElementById("modal2");
+var modal3 = document.getElementById("modal3");
+var modal4 = document.getElementById("modal4");
+var modal5 = document.getElementById("modal5");
+var modal6 = document.getElementById("modal6");
+var modal7 = document.getElementById("modal7");
+
+// Get the close buttons
+var close1 = document.querySelector("[data-modal=modal1]");
+var close2 = document.querySelector("[data-modal=modal2]");
+var close3 = document.querySelector("[data-modal=modal3]");
+var close4 = document.querySelector("[data-modal=modal4]");
+var close5 = document.querySelector("[data-modal=modal5]");
+var close6 = document.querySelector("[data-modal=modal6]");
+var close7 = document.querySelector("[data-modal=modal7]");
+
+// When the user clicks on button 1, open modal 1
+btn1.onclick = function() {
+  modal1.style.display = "block";
+}
+
+// When the user clicks on button 2, open modal 2
+btn2.onclick = function() {
+  modal2.style.display = "block";
+}
+// When the user clicks on button 3, open modal 3
+btn3.onclick = function() {
+  modal3.style.display = "block";
+}
+// When the user clicks on button 4, open modal 4
+btn4.onclick = function() {
+  modal4.style.display = "block";
+}
+// When the user clicks on button 5, open modal 5
+btn5.onclick = function() {
+  modal5.style.display = "block";
+}
+// When the user clicks on button 6, open modal 6
+btn6.onclick = function() {
+  modal6.style.display = "block";
+}
+// When the user clicks on button 7, open modal 7
+btn7.onclick = function() {
+  modal7.style.display = "block";
+}
+
+// When the user clicks on close button, close the modal
+close1.onclick = function() {
+  modal1.style.display = "none";
+}
+
+close2.onclick = function() {
+  modal2.style.display = "none";
+}
+close3.onclick = function() {
+  modal3.style.display = "none";
+}
+close4.onclick = function() {
+  modal4.style.display = "none";
+}
+close5.onclick = function() {
+  modal5.style.display = "none";
+}
+close6.onclick = function() {
+  modal6.style.display = "none";
+}
+close7.onclick = function() {
+  modal7.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+ if (event.target == modal1 || event.target == modal2 || event.target == modal3 || event.target == modal4 || event.target == modal5 || event.target == modal6 || event.target == modal7) {
+   event.target.style.display = "none";
+ }
+}
 
     </script>
 
