some content edited

--- a/index.html
+++ b/index.html
@@ -438,14 +438,17 @@
                             </p>
                         </div>
                         <div class="publictaion">
-                            <div class="card">
+                            <div class="card card-top">
                                 <img alt="something" src="./unsplash_9anj7QWy-2g.png">
                                 <div class="info">
                                     <h2>
                                         Cell Culture, Medical Internship
                                     </h2>
                                     <p>
-                                        Materials and Energy Research Center, Karaj, Iran
+                                        Materials and Energy Research Center
+                                    </p>
+                                    <p>
+                                        Karaj, Iran
                                     </p>
                                     <button class="btn-border" id="btn1">
                                         Read More ...
@@ -465,10 +468,13 @@
                                 <img alt="something" src="./unsplash_9anj7QWy-2g.png">
                                 <div class="info">
                                     <h2>
-                                        Produce Bioplastics From Starch, Special Assistant to Rahmatollah Tavakoli, Professor of Organic Chemistry
+                                        Produce Bioplastics From Starch
                                     </h2>
                                     <p>
-                                        Maziar Higher Education Institute, Royan, Iran
+                                        Maziar Higher Education Institute 
+                                    </p>
+                                    <p>
+                                        Royan, Iran
                                     </p>
                                     <button class="btn-border" id="btn2">
                                         Read More ...
@@ -495,10 +501,13 @@
                                 <img alt="something" src="./unsplash_9anj7QWy-2g.png">
                                 <div class="info">
                                     <h2>
-                                        Cell Culture, Medical Internship
+                                        Private Chemistry Tutor 
                                     </h2>
                                     <p>
-                                        Materials and Energy Research Center, Karaj, Iran
+                                        Rasht Iran
+                                    </p>
+                                    <p>
+                                        2019 - Present
                                     </p>
                                     <button class="btn-border" id="btn3">
                                         Read More ...
@@ -506,10 +515,11 @@
                                     <div id="modal3" class="modal">
                                         <div class="modal-content">
                                           <span class="close" data-modal="modal3">&times;</span>
-                                          <h3>Cell Culture, Medical Internship, Materials and Energy Research Center, Karaj, Iran</h3>
-                                          <p>- Maintained and cultured a variety of normal cell lines, including primary cells and immortalized cell lines, ensuring optimal growth and viability.</p>
-                                          <p>- Performed a variety of cell culture experiments, such as proliferation assays, differentiation assays, and cell-cell interaction assays, to investigate the fundamental biology of normal cells and their role in cancer development and progression.</p>
-                                          <p>- Analyzed data from cell culture experiments using statistical software to identify significant trends and interpret the results.</p>
+                                          <h3>Private Chemistry Tutor, Rasht Iran	2019 - Present</h3>
+                                          <p>- Taught chemistry to students at all levels, from high school to college, throughout the Gilan Province.</p>
+                                          <p>- Developed and delivered lesson plans tailored to individual student needs, ensuring that all students met learning objectives.</p>
+                                          <p>- Provided feedback on student work, helping them to improve their understanding of chemistry concepts and problem-solving skills.</p>
+                                          <p>- Tracked student progress, ensuring that they were meeting learning objectives.</p>
                                         </div>
                                       </div>
                                 </div>
@@ -518,10 +528,13 @@
                                 <img alt="something" src="./unsplash_9anj7QWy-2g.png">
                                 <div class="info">
                                     <h2>
-                                        Produce Bioplastics From Starch, Special Assistant to Rahmatollah Tavakoli, Professor of Organic Chemistry
+                                        Private Mathematics Tutor 
                                     </h2>
                                     <p>
-                                        Maziar Higher Education Institute, Royan, Iran
+                                        Rasht Iran
+                                    </p>
+                                    <p>
+                                        2019 - Present
                                     </p>
                                     <button class="btn-border" id="btn4">
                                         Read More ...
@@ -529,10 +542,10 @@
                                     <div id="modal4" class="modal">
                                         <div class="modal-content">
                                           <span class="close" data-modal="modal4">&times;</span>
-                                          <h3>Produce Bioplastics From Starch, Special Assistant to Rahmatollah Tavakoli, Professor of Organic Chemistry, Maziar Higher Education Institute, Royan, Iran</h3>
-                                          <p>Carefully grew and maintained a variety of starch-producing microbes, including bacteria, yeast, and algae, to ensure that they were healthy and able to produce bioplastics.</p>
-                                          <p>Conducted a variety of experiments to produce bioplastics, such as fermentation, extraction, and purification, to study the basic principles of bioplastic production and improve the process.</p>
-                                          <p>Used statistical software to analyze data from bioplastic production experiments to identify important trends and interpret the results.</p>
+                                          <h3>Private Mathematics Tutor, Rasht Iran	2019 - Present</h3>
+                                          <p>- CTaught mathematics to students of all educational levels, from primary to pre-university.</p>
+                                          <p>- Developed and delivered lesson plans tailored to individual student needs.</p>
+                                          <p>- Tracked student progress and provided feedback to help them improve their understanding of mathematical concepts and problem-solving skills.</p>
                                         </div>
                                       </div>
                                 </div>
@@ -541,10 +554,13 @@
                                 <img alt="something" src="./unsplash_9anj7QWy-2g.png">
                                 <div class="info">
                                     <h2>
-                                        Produce Bioplastics From Starch, Special Assistant to Rahmatollah Tavakoli, Professor of Organic Chemistry
+                                        Laboratory Quality Control Head
                                     </h2>
                                     <p>
-                                        Maziar Higher Education Institute, Royan, Iran
+                                        Anjir Talaee Co., Karaj, Iran
+                                    </p>
+                                    <p>
+                                        2016 - 2019
                                     </p>
                                     <button class="btn-border" id="btn5">
                                         Read More ...
@@ -552,10 +568,13 @@
                                     <div id="modal5" class="modal">
                                         <div class="modal-content">
                                           <span class="close" data-modal="modal5">&times;</span>
-                                          <h3>Produce Bioplastics From Starch, Special Assistant to Rahmatollah Tavakoli, Professor of Organic Chemistry, Maziar Higher Education Institute, Royan, Iran</h3>
-                                          <p>Carefully grew and maintained a variety of starch-producing microbes, including bacteria, yeast, and algae, to ensure that they were healthy and able to produce bioplastics.</p>
-                                          <p>Conducted a variety of experiments to produce bioplastics, such as fermentation, extraction, and purification, to study the basic principles of bioplastic production and improve the process.</p>
-                                          <p>Used statistical software to analyze data from bioplastic production experiments to identify important trends and interpret the results.</p>
+                                          <h3>Laboratory Quality Control Head, Anjir Talaee Co., Karaj, Iran	2016 - 2019
+                                          </h3>
+                                          <p>- Managed and supervised a team of 75 workers in a laboratory setting.</p>
+                                          <p>- Collaborated with a professional team to improve laboratory processes and operations.</p>
+                                          <p>- Ensured the quality of scientific reports and products by analyzing, reviewing, drafting, evaluating, proving, and confirming them.</p>
+                                          <p>- Conducted experiments and tested products to identify and resolve problems.</p>
+                                          <p>- Broadened research areas and communicated effectively with stakeholders.</p>
                                         </div>
                                       </div>
                                 </div>
@@ -564,10 +583,13 @@
                                 <img alt="something" src="./unsplash_9anj7QWy-2g.png">
                                 <div class="info">
                                     <h2>
-                                        Produce Bioplastics From Starch, Special Assistant to Rahmatollah Tavakoli, Professor of Organic Chemistry
+                                        Technical Trainer 
                                     </h2>
                                     <p>
-                                        Maziar Higher Education Institute, Royan, Iran
+                                        Anjir Talaee Co., Karaj, Iran
+                                    </p>
+                                    <p>
+                                        2016 - 2019
                                     </p>
                                     <button class="btn-border" id="btn6">
                                         Read More ...
@@ -575,10 +597,11 @@
                                     <div id="modal6" class="modal">
                                         <div class="modal-content">
                                           <span class="close" data-modal="modal6">&times;</span>
-                                          <h3>Produce Bioplastics From Starch, Special Assistant to Rahmatollah Tavakoli, Professor of Organic Chemistry, Maziar Higher Education Institute, Royan, Iran</h3>
-                                          <p>Carefully grew and maintained a variety of starch-producing microbes, including bacteria, yeast, and algae, to ensure that they were healthy and able to produce bioplastics.</p>
-                                          <p>Conducted a variety of experiments to produce bioplastics, such as fermentation, extraction, and purification, to study the basic principles of bioplastic production and improve the process.</p>
-                                          <p>Used statistical software to analyze data from bioplastic production experiments to identify important trends and interpret the results.</p>
+                                          <h3>- Developed and implemented informative hygiene and 5S programs for 180 employees on a monthly basis.</h3>
+                                          <p>- Provided training to colleagues on a variety of topics, including basic and fundamental concepts, practical solutions, and research findings.</p>
+                                          <p>- Motivated and guided colleagues through the training process.</p>
+                                          <p>- Evaluated the effectiveness of training programs and made adjustments as needed.</p>
+                                          <p>- Communicated effectively with trainees to ensure that they understood the material and were able to apply it to their jobs.</p>
                                         </div>
                                       </div>
                                 </div>
@@ -587,10 +610,13 @@
                                 <img alt="something" src="./unsplash_9anj7QWy-2g.png">
                                 <div class="info">
                                     <h2>
-                                        Produce Bioplastics From Starch, Special Assistant to Rahmatollah Tavakoli, Professor of Organic Chemistry
+                                        Laboratory Quality Control Head
                                     </h2>
                                     <p>
-                                        Maziar Higher Education Institute, Royan, Iran
+                                        Saramad Teb Parayeh, Karaj, Iran
+                                    </p>
+                                    <p>
+                                        2016 - 2016 
                                     </p>
                                     <button class="btn-border" id="btn7">
                                         Read More ...
@@ -598,10 +624,12 @@
                                     <div id="modal7" class="modal">
                                         <div class="modal-content">
                                           <span class="close" data-modal="modal7">&times;</span>
-                                          <h3>Produce Bioplastics From Starch, Special Assistant to Rahmatollah Tavakoli, Professor of Organic Chemistry, Maziar Higher Education Institute, Royan, Iran</h3>
-                                          <p>Carefully grew and maintained a variety of starch-producing microbes, including bacteria, yeast, and algae, to ensure that they were healthy and able to produce bioplastics.</p>
-                                          <p>Conducted a variety of experiments to produce bioplastics, such as fermentation, extraction, and purification, to study the basic principles of bioplastic production and improve the process.</p>
-                                          <p>Used statistical software to analyze data from bioplastic production experiments to identify important trends and interpret the results.</p>
+                                          <h3>Laboratory Quality Control Head, Saramad Teb Parayeh, Karaj, Iran	2016 - 2016</h3>
+                                          <p>- Planned and conducted experiments to investigate scientific questions and generate data.</p>
+                                          <p>- Oversaw the progress of experiments and tests to ensure that they were completed according to protocol.</p>
+                                          <p>- Transferred and delivered samples to the laboratory for analysis.</p>
+                                          <p>- Supervised a team of laboratory workers to ensure the efficient and accurate completion of tasks.</p>
+                                          <p>- Liaised with laboratory personnel and established rapport to facilitate communication and collaboration.</p>
                                         </div>
                                       </div>
                                 </div>
